Authorization Operations Updated & Bugs fixed